; ModuleID = '/home/carl/AnghaBench/linux/arch/s390/kernel/extr_time.c_stp_timing_alert.c'
source_filename = "/home/carl/AnghaBench/linux/arch/s390/kernel/extr_time.c_stp_timing_alert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stp_irq_parm = type { i64, i64, i64 }

@time_sync_wq = common dso_local global i32 0, align 4
@stp_work = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stp_irq_parm*)* @stp_timing_alert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stp_timing_alert(%struct.stp_irq_parm* %0) #0 {
  %2 = alloca %struct.stp_irq_parm*, align 8
  store %struct.stp_irq_parm* %0, %struct.stp_irq_parm** %2, align 8
  %3 = load %struct.stp_irq_parm*, %struct.stp_irq_parm** %2, align 8
  %4 = getelementptr inbounds %struct.stp_irq_parm, %struct.stp_irq_parm* %3, i32 0, i32 2
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %17, label %7

7:                                                ; preds = %1
  %8 = load %struct.stp_irq_parm*, %struct.stp_irq_parm** %2, align 8
  %9 = getelementptr inbounds %struct.stp_irq_parm, %struct.stp_irq_parm* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %17, label %12

12:                                               ; preds = %7
  %13 = load %struct.stp_irq_parm*, %struct.stp_irq_parm** %2, align 8
  %14 = getelementptr inbounds %struct.stp_irq_parm, %struct.stp_irq_parm* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %12, %7, %1
  %18 = load i32, i32* @time_sync_wq, align 4
  %19 = call i32 @queue_work(i32 %18, i32* @stp_work)
  br label %20

20:                                               ; preds = %17, %12
  ret void
}

declare dso_local i32 @queue_work(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
